fixing some overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 * {
   font-family: 'Poppins','Helvetica Neue', 'Times New Roman';
+  overflow: visible;
 }
 .mainContainer{
   background-color: #101010;
-  
+  overflow: hidden;
   padding: 0;
   transition: 0.05 ease-out;
 }
@@ -17,6 +18,7 @@ a{
 }
 #navigationBar{
   padding: 1.5vw 0vw 1vw 1vw;
+  width: 100vw;
 }
 
 #navigationBar  h1{
@@ -202,6 +204,7 @@ a{
   align-items: center;
   justify-content: center;
   text-align: center;
+
 }
 #aboutMeContainer p{
   font-size: 2.4vmin;
@@ -230,6 +233,7 @@ a{
 
 #educationContainer{
   padding-bottom: 6vh;
+  overflow: hidden;
 }
 .individualEducationContainer{
   padding-bottom: 4vmin;
